# Meta-env

./: .env.example  .gitignore  README.md  __init__.py  cleanup_unicode.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  quick_test.py  remove_emojis.py  test_inference_scores.py  test_score_bounds.py
server/: Dockerfile  app.py  environment.py
